# AeroMorph

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.ps1  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
aeromorph/: __init__.py
aeromorph/algorithms/: __init__.py  p2ma.py  spatial_feasibility.py  unified_optimizer.py
aeromorph/core/: __init__.py  config_space.py  decision_space.py  state.py  types.py
aeromorph/perception/: __init__.py
aeromorph/planning/: __init__.py  energy_aware.py
aeromorph/swarm/: __init__.py  ea_smp.py
aeromorph/utils/: __init__.py  geometry.py  visualization.py
docs/images/: README.md
examples/: basic_p2ma.py  energy_planning.py  swarm_coordination.py
tests/: __init__.py  conftest.py  test_decision_space.py  test_p2ma.py  test_spatial.py  test_swarm.py
