[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeromorph"
version = "0.1.0"
description = "Unified framework for autonomous morphing decisions in aerial robots"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "H M Shujaat Zaheer", email = "shujabis@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
viz = [
    "matplotlib>=3.5.0",
]
full = [
    "torch>=2.0.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/hmshujaatzaheer/AeroMorph"
Documentation = "https://github.com/hmshujaatzaheer/AeroMorph#readme"
Repository = "https://github.com/hmshujaatzaheer/AeroMorph"
Issues = "https://github.com/hmshujaatzaheer/AeroMorph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeromorph*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
